--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -348,130 +348,6 @@ Init values for dynamic properties to reduce  page load time
 Init values for dynamic properties to reduce  page load time 
 */
 /* FONT */
-/*
-Init values for dynamic properties to reduce  page load time 
-*/
-/* FONT */
-.neu-style {
-  /* TEXT DROP SHADOW */
-}
-
-.neu-style .button-border,
-.neu-style .box-border,
-.neu-style .image-border,
-.neu-style .badge-border,
-.neu-style .setting-button-border,
-.neu-style .segmented-control,
-.neu-style .hero-03 .personal-image img,
-.neu-style .checkbox label,
-.neu-style .blog-intro,
-.neu-style table,
-.neu-style table thead,
-.neu-style .range-slider__value,
-.neu-style .form-group input:focus,
-.neu-style .form-group textarea:focus,
-.neu-style .setting-panel,
-.neu-style .toggle .indicator {
-  -webkit-box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
-          box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
-}
-
-.neu-style .button.active,
-.neu-style .setting-button.active,
-.neu-style .radio-button-group .button.active,
-.neu-style .custom-scrollbar,
-.neu-style .blog .blog-image .after,
-.neu-style .skill-boxes .box-border,
-.neu-style .setting-section .scrollable,
-.neu-style .timeline-items.box-border,
-.neu-style .range-slider__range,
-.neu-style .radio-selection {
-  -webkit-box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-          box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-}
-
-.neu-style .toggle,
-.neu-style .form-group input,
-.neu-style .form-group textarea,
-.neu-style .skill-box .skillbar {
-  -webkit-box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6,  inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-          box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6,  inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-}
-
-.neu-style .section,
-.neu-style .display-content > .container,
-.neu-style .display-content,
-.neu-style .button,
-.neu-style .setting-button,
-.neu-style .setting-panel,
-.neu-style .contact .form-item .form-group,
-.neu-style .segmented-control,
-.neu-style .checkbox label,
-.neu-style .portfolio-single .modal-content,
-.neu-style .range-slider__range,
-.neu-style .range-slider__value,
-.neu-style ::-webkit-scrollbar-track {
-  background-color: #D4D4D4;
-}
-
-.neu-style .segmented-control > input:not(:checked):not(:hover) + label {
-  color: #4D4D4D;
-}
-
-.neu-style .button,
-.neu-style .segmented-control > input:checked + label,
-.neu-style .segmented-control > input:hover + label {
-  color: #004b97;
-}
-
-.neu-style .button:hover,
-.neu-style .badge-border:hover,
-.neu-style table > tbody > tr:hover,
-.neu-style .setting-button:hover {
-  -webkit-box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-          box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-}
-
-.neu-style .checkbox input:checked ~ label {
-  -webkit-box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-          box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-}
-
-.neu-style .checkbox input:not(:checked):not(:hover) ~ label i,
-.neu-style .checkbox input:not(:checked) ~ label + .name {
-  color: #4D4D4D;
-}
-
-.neu-style .checkbox input:checked ~ label + .name,
-.neu-style .checkbox input:checked ~ label i,
-.neu-style .checkbox input:hover ~ label i {
-  color: #004b97;
-}
-
-.neu-style ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-          box-shadow: inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-  background-color: #D4D4D4;
-}
-
-.neu-style ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset -3px -3px 4px 0px #c2c2c2, inset 3px 3px 4px 0px #e6e6e6;
-          box-shadow: inset -3px -3px 4px 0px #c2c2c2, inset 3px 3px 4px 0px #e6e6e6;
-  background-color: #D4D4D4;
-}
-
-.neu-style ::-webkit-slider-thumb {
-  background-color: #D4D4D4;
-  -webkit-box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
-          box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
-}
-
-.neu-style ::-webkit-slider-thumb:hover,
-.neu-style input[type=range]:focus {
-  -webkit-box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6,  inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-          box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6,  inset 3px 3px 4px 0px #c2c2c2, inset -3px -3px 4px 0px #e6e6e6;
-}
-
 .radio-title {
   font-size: 1.1rem !important;
   color: black;
@@ -517,8 +393,6 @@ Init values for dynamic properties to reduce  page load time
   position: relative;
   height: 25px;
   width: 25px;
-  -webkit-box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
-          box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -534,15 +408,8 @@ Init values for dynamic properties to reduce  page load time
   border-radius: 50%;
 }
 
-.radio-group .indicator::before {
-  -webkit-box-shadow: -4px -2px 4px 0px #c2c2c2, 4px 2px 8px 0px #e6e6e6;
-          box-shadow: -4px -2px 4px 0px #c2c2c2, 4px 2px 8px 0px #e6e6e6;
-}
-
 .radio-group .indicator::after {
   background-color: #D4D4D4;
-  -webkit-box-shadow: -4px -2px 4px 0px #e6e6e6, 4px 2px 8px 0px #c2c2c2;
-          box-shadow: -4px -2px 4px 0px #e6e6e6, 4px 2px 8px 0px #c2c2c2;
   -webkit-transform: scale3d(1, 1, 1);
           transform: scale3d(1, 1, 1);
   -webkit-transition: opacity .25s ease-in-out, -webkit-transform .25s ease-in-out;
@@ -1069,7 +936,25 @@ Init values for dynamic properties to reduce  page load time
 */
 /* FONT */
 .neu-style {
+  /*-------------------------
+      FORMS
+-------------------------*/
   /* TEXT DROP SHADOW */
+}
+
+.neu-style .radio-group .indicator {
+  -webkit-box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
+          box-shadow: 3px 3px 4px 0px #c2c2c2, -3px -3px 4px 0px #e6e6e6;
+}
+
+.neu-style .radio-group .indicator::before {
+  -webkit-box-shadow: -4px -2px 4px 0px #c2c2c2, 4px 2px 8px 0px #e6e6e6;
+          box-shadow: -4px -2px 4px 0px #c2c2c2, 4px 2px 8px 0px #e6e6e6;
+}
+
+.neu-style .radio-group .indicator::after {
+  -webkit-box-shadow: -4px -2px 4px 0px #e6e6e6, 4px 2px 8px 0px #c2c2c2;
+          box-shadow: -4px -2px 4px 0px #e6e6e6, 4px 2px 8px 0px #c2c2c2;
 }
 
 .neu-style .button-border,
