--- a/scss/forms/_radio.scss
+++ b/scss/forms/_radio.scss
@@ -1,5 +1,4 @@
 @import "../base/_variables";
-@import "../init/_neu";
 
 .radio-title {
         font-size: 1.1rem !important;
@@ -40,7 +39,6 @@
                 position: relative;
                 height: 25px;
                 width: 25px;
-                box-shadow: $dropBoxShadow;
                 border-radius: 50%;
                 overflow: hidden;
         }
@@ -56,18 +54,10 @@
                 border-radius: 50%;
         }
 
-        $radioIndicatorUncheckedBoxShadow: -4px -2px 4px 0px $darkenSchemeColor,
-        4px 2px 8px 0px $lightenSchemeColor;
-        $radioIndicatorCheckedBoxShadow: -4px -2px 4px 0px $lightenSchemeColor,
-        4px 2px 8px 0px $darkenSchemeColor;
-
-        .indicator::before {
-                box-shadow: $radioIndicatorUncheckedBoxShadow;
-        }
+        .indicator::before {}
 
         .indicator::after {
                 background-color: $schemeColor;
-                box-shadow: $radioIndicatorCheckedBoxShadow;
                 transform: scale3d(1, 1, 1);
                 transition: opacity .25s ease-in-out, transform .25s ease-in-out;
         }
