Create demo page for project

--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -156,6 +156,11 @@ button {
         outline: none !important;
 }
 
+.setting-button a {
+        // background-color: black;
+        // opacity: 1;
+}
+
 .box-border {
         background-color: #f1f3f6;
         padding: 15px 20px 7px;
