--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -163,6 +163,7 @@ body,
 .contact #message.toast,
 .button,
 .setting-button,
+.setting-button a,
 .nes-btn::after,
 .button-border,
 .image-border img,
