--- a/scss/init/_neu.scss
+++ b/scss/init/_neu.scss
@@ -133,6 +133,7 @@ inset #{$distanceX}px #{$distanceY}px #{$blur}px #{$spread}px #{$lightenSchemeCo
         .display-content,
         .button,
         .setting-button,
+        .setting-button a,
         .setting-panel,
         .contact .form-item .form-group,
         .segmented-control,
