--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -3,6 +3,222 @@ Init values for dynamic properties to reduce  page load time
 */
 /* FONT */
 /*-------------------------
+         SETTING
+-------------------------*/
+.setting-section .setting-panel {
+  top: 75px;
+  z-index: 1000;
+  position: fixed;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  width: 180px;
+  left: 55px;
+}
+
+.setting-section .setting-panel .radio-group {
+  padding: 1px 64px;
+}
+
+.setting-panel.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.setting-panel.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.setting-section .setting-button-border {
+  border-left: none !important;
+  top: 75px;
+  z-index: 1000;
+  position: fixed;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-transition: left .7s ease;
+  transition: left .7s ease;
+  display: block;
+  height: 40px;
+  left: 0;
+  width: 40px;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+.setting-section .setting-button-border .setting-button {
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  position: fixed;
+  height: 98%;
+}
+
+.setting-section .setting-button-border .cp-toggle {
+  position: fixed;
+}
+
+.setting-section .setting-button-border a {
+  width: 40px;
+  height: 40px;
+  display: block;
+  text-align: center;
+}
+
+.setting-section .setting-button-border i {
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.setting-section .scrollable {
+  padding-top: 1rem;
+  border-radius: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 370px;
+}
+
+.setting-save-panel {
+  height: 45px;
+  padding-top: 8px;
+}
+
+.setting-panel-content {
+  direction: ltr;
+}
+
+.setting-panel-content p {
+  font-size: 1.1rem !important;
+  margin-bottom: 10px !important;
+}
+
+.setting-section .label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.setting-section .label-text {
+  margin-left: 16px;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.setting-section .toggle {
+  isolation: isolate;
+  position: relative;
+  height: 25px;
+  width: 60px;
+  overflow: hidden;
+}
+
+.setting-section .toggle-state {
+  display: none;
+}
+
+.setting-section .indicator {
+  height: 100%;
+  width: 200%;
+  -webkit-transform: translate3d(-75%, 0, 0);
+          transform: translate3d(-75%, 0, 0);
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35), -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+}
+
+.setting-section .toggle-state:checked ~ .indicator {
+  -webkit-transform: translate3d(25%, 0, 0);
+          transform: translate3d(25%, 0, 0);
+}
+
+.setting-section .scrollable::-webkit-scrollbar {
+  width: 7px !important;
+}
+
+.setting-section .scrollable::-webkit-scrollbar-thumb {
+  border-radius: 0 !important;
+}
+
+.setting-section ul.pattern {
+  list-style: none outside none;
+  margin: 0 0 0;
+  overflow: hidden;
+  padding: 0;
+}
+
+.setting-section ul.pattern li {
+  float: left;
+}
+
+/*-------------------------
+       COLOR SCHEME
+-------------------------*/
+.color-scheme li {
+  width: 40%;
+  margin: 0 !important;
+}
+
+.color-scheme li a {
+  display: block;
+  padding: 8px 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  font-size: 20px;
+}
+
+.color-scheme li a.light-scheme:hover,
+.color-scheme li a.light-scheme.active {
+  background-color: #0fcae8;
+  color: #fff;
+}
+
+.color-scheme li a.dark-scheme-option:hover,
+.color-scheme li a.dark-scheme-option.active {
+  background-color: #2c2d30;
+  color: #fff;
+}
+
+.theme-skin {
+  margin: 0;
+  padding: 8px 0 0 0;
+}
+
+.theme-skin .button-border {
+  display: inline-block;
+}
+
+.theme-skin .button {
+  padding: 8px 20px !important;
+}
+
+.theme-skin div a {
+  font-size: 1.15rem !important;
+}
+
+.theme-skin div {
+  padding: 1px;
+  margin-bottom: 12px;
+}
+
+#color-panel label {
+  font-size: 1.1rem !important;
+  margin-bottom: 0.2rem !important;
+}
+
+.color-picker {
+  margin: auto;
+  display: block;
+}
+
+/*
+Init values for dynamic properties to reduce  page load time 
+*/
+/* FONT */
+/*-------------------------
          GENERAL
 -------------------------*/
 @font-face {
@@ -354,7 +570,6 @@ Init values for dynamic properties to reduce  page load time
 }
 
 .radio-group {
-  padding: 1px 64px;
   padding-bottom: 0;
 }
 
@@ -639,14 +854,14 @@ input::-moz-focus-outer {
   cursor: pointer;
 }
 
-.glass-style .background-1,
+.glass-style .background-1, .glass-style.background-1,
 .glass-style #background-1 {
   /* background by SVGBackgrounds.com */
   background-color: #d3e4ff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23b3c2d9' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-.glass-style .background-2,
+.glass-style .background-2, .glass-style.background-2,
 .glass-style #background-2 {
   /* background by SVGBackgrounds.com */
   background-color: #ffffff;
@@ -655,12 +870,16 @@ input::-moz-focus-outer {
   background-size: cover;
 }
 
-.glass-style .background-3,
+.glass-style .background-3, .glass-style.background-3,
 .glass-style #background-3 {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
+}
+
+.glass-style.background-3 {
+  background-size: 400% 1200%;
 }
 
 .glass-style .section {
@@ -937,6 +1156,7 @@ body,
 .contact #message.toast,
 .button,
 .setting-button,
+.setting-button a,
 .nes-btn::after,
 .button-border,
 .image-border img,
@@ -1117,6 +1337,7 @@ Init values for dynamic properties to reduce  page load time
 .neu-style .display-content,
 .neu-style .button,
 .neu-style .setting-button,
+.neu-style .setting-button a,
 .neu-style .setting-panel,
 .neu-style .contact .form-item .form-group,
 .neu-style .segmented-control,
