--- a/scss/styles/_glass.scss
+++ b/scss/styles/_glass.scss
@@ -11,6 +11,7 @@
         }
 
         .background-1,
+        &.background-1,
         #background-1 {
                 /* background by SVGBackgrounds.com */
                 background-color: #d3e4ff;
@@ -18,6 +19,7 @@
         }
 
         .background-2,
+        &.background-2,
         #background-2 {
                 /* background by SVGBackgrounds.com */
                 background-color: #ffffff;
@@ -28,11 +30,16 @@
 
         // Gradient animation
         .background-3,
+        &.background-3,
         #background-3 {
                 background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
                 background-size: 400% 400%;
                 animation: gradient 15s ease infinite;
                 // z-index: 2;
+        }
+
+        &.background-3 {
+                background-size: 400% 1200%;
         }
 
         .section {
