--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -14,6 +14,7 @@ $contrastColorfull2: white;
 $contrastColorfull3: white;
 
 $borderRadius: 9px;
+$transitionDuration: 0.8s;
 
 /* FONT */
 $fontRegular:"Agency FB",
