--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -9,10 +9,18 @@ Init values for dynamic properties to reduce  page load time
   top: 75px;
   z-index: 1000;
   position: fixed;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
   width: 180px;
   left: 55px;
+}
+
+.setting-section .setting-panel .radio-button-group .button-border {
+  display: inline-block;
+}
+
+.setting-section .setting-panel .radio-button-group .button-border .button {
+  padding: 8px 20px;
 }
 
 .setting-section .setting-panel .radio-group {
@@ -22,6 +30,12 @@ Init values for dynamic properties to reduce  page load time
 .setting-panel.hide {
   opacity: 0;
   visibility: hidden;
+}
+
+.setting-panel.hide .radio-button-group .button-border,
+.setting-panel.hide .radio-button-group .button-border .button {
+  -webkit-transition: opacity 0s linear !important;
+  transition: opacity 0s linear !important;
 }
 
 .setting-panel.show {
@@ -187,14 +201,6 @@ Init values for dynamic properties to reduce  page load time
   padding: 8px 0 0 0;
 }
 
-.theme-skin .button-border {
-  display: inline-block;
-}
-
-.theme-skin .button {
-  padding: 8px 20px !important;
-}
-
 .theme-skin div a {
   font-size: 1.15rem !important;
 }
@@ -235,8 +241,14 @@ Init values for dynamic properties to reduce  page load time
   font-display: swap;
 }
 
-.section {
-  overflow-x: hidden !important;
+body {
+  height: 100vh;
+  -webkit-transition: 1s background ease;
+  transition: 1s background ease;
+}
+
+.display-content {
+  background-color: transparent !important;
 }
 
 .full-screen {
@@ -246,7 +258,6 @@ Init values for dynamic properties to reduce  page load time
 .image-border,
 .box-border,
 .form-group,
-.button-border,
 .blog-intro,
 .blog-image,
 .checkbox label,
@@ -361,28 +372,6 @@ button {
 .box-border {
   background-color: #f1f3f6;
   padding: 15px 20px 7px;
-}
-
-.button-border button {
-  background-color: transparent;
-}
-
-.button-border {
-  display: inline-block;
-  padding: 1px;
-}
-
-.button {
-  padding: 10px 30px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  font-size: 22px;
-  font-weight: 500 !important;
-  display: inline-block;
-}
-
-.button i {
-  font-size: 15px;
 }
 
 .image-caption {
@@ -564,6 +553,33 @@ Init values for dynamic properties to reduce  page load time
 Init values for dynamic properties to reduce  page load time 
 */
 /* FONT */
+.button-border {
+  display: inline-block;
+  padding: 1px;
+  border-radius: 9px;
+  transition: 0.8s all ease !important;
+  -webkit-transition: 0.8s all ease !important;
+}
+
+.button-border .button {
+  color: #004b97;
+  border-radius: 9px;
+  padding: 10px 30px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  font-size: 22px;
+  font-weight: 500 !important;
+  display: inline-block;
+}
+
+.button-border .button i {
+  font-size: 15px;
+}
+
+/*
+Init values for dynamic properties to reduce  page load time 
+*/
+/* FONT */
 .radio-title {
   font-size: 1.1rem !important;
   color: black;
@@ -681,12 +697,15 @@ Init values for dynamic properties to reduce  page load time
 }
 
 .range-slider label {
+  border-radius: 9px;
+  color: #4D4D4D;
   font-size: 1.1rem !important;
   display: block;
   margin: 0px 0 0px;
 }
 
 .range-slider__range {
+  border-radius: 9px;
   -webkit-appearance: none;
   width: calc(75% - (2.5rem));
   height: 10px;
@@ -732,6 +751,8 @@ Init values for dynamic properties to reduce  page load time
   transition: all 0.3s ease;
   font-style: italic;
   font-size: 1rem !important;
+  border-radius: 9px;
+  color: #4D4D4D;
 }
 
 .range-slider__value .after {
@@ -878,15 +899,6 @@ input::-moz-focus-outer {
           animation: gradient 15s ease infinite;
 }
 
-.glass-style.background-3 {
-  background-size: 400% 1200%;
-}
-
-.glass-style .section {
-  -webkit-transition: 1s all ease;
-  transition: 1s all ease;
-}
-
 @-webkit-keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -981,19 +993,6 @@ input::-moz-focus-outer {
 Init values for dynamic properties to reduce  page load time 
 */
 /* FONT */
-/*-------------------------
-      FORMS
--------------------------*/
-.range-slider label,
-.range-slider .range-slider__value {
-  border-radius: 9px;
-  color: #4D4D4D;
-}
-
-.range-slider .range-slider__range {
-  border-radius: 9px;
-}
-
 .section,
 .display-content > .container,
 body,
@@ -1022,7 +1021,6 @@ body,
 }
 
 .highlight-color,
-.button,
 .overlay-menu a.active,
 .timeline-year,
 .portfolio .radio-button-group li a,
@@ -1154,11 +1152,9 @@ body,
 .comments-devider,
 .contact .form-item .form-group,
 .contact #message.toast,
-.button,
 .setting-button,
 .setting-button a,
 .nes-btn::after,
-.button-border,
 .image-border img,
 .image-border,
 .setting-section .setting-panel,
@@ -1200,19 +1196,16 @@ table,
   color: #4D4D4D;
 }
 
-.flat-style .button,
 .flat-style .radio-group .label,
 .flat-style .checkbox label,
 .flat-style i,
 .flat-style .overlay-menu-toggler,
 .flat-style input[type=color],
-.neu-style .button,
 .neu-style .radio-group .label,
 .neu-style .checkbox label,
 .neu-style i,
 .neu-style .overlay-menu-toggler,
 .neu-style input[type=color],
-.glass-style .button,
 .glass-style .radio-group .label,
 .glass-style .checkbox label,
 .glass-style i,
@@ -1221,19 +1214,16 @@ table,
   cursor: pointer;
 }
 
-.flat-style .button *,
 .flat-style .radio-group .label *,
 .flat-style .checkbox label *,
 .flat-style i *,
 .flat-style .overlay-menu-toggler *,
 .flat-style input[type=color] *,
-.neu-style .button *,
 .neu-style .radio-group .label *,
 .neu-style .checkbox label *,
 .neu-style i *,
 .neu-style .overlay-menu-toggler *,
 .neu-style input[type=color] *,
-.glass-style .button *,
 .glass-style .radio-group .label *,
 .glass-style .checkbox label *,
 .glass-style i *,
@@ -1397,9 +1387,31 @@ Init values for dynamic properties to reduce  page load time
 Init values for dynamic properties to reduce  page load time 
 */
 /* FONT */
-.flat-style .button,
+.flat-style {
+  /*-------------------------
+      ELEMENTS
+-------------------------*/
+}
+
+.flat-style .button {
+  background-color: #004b97;
+  color: #EBEBEB;
+}
+
+.flat-style .button:hover {
+  background-color: #033669;
+}
+
 .flat-style .radio-button-group .button.active,
-.flat-style .radio-button-group .button:not(.active):hover,
+.flat-style .radio-button-group .button:not(.active):hover {
+  background-color: #004b97;
+  color: #EBEBEB;
+}
+
+.flat-style .radio-button-group .button:not(.active) {
+  color: #004b97;
+}
+
 .flat-style .radio-selection,
 .flat-style table > tbody > tr:hover {
   background-color: #004b97;
@@ -1425,14 +1437,6 @@ Init values for dynamic properties to reduce  page load time
 .flat-style .modal-content {
   background-color: #D4D4D4;
   color: black;
-}
-
-.flat-style .radio-button-group .button:not(.active) {
-  color: #004b97;
-}
-
-.flat-style .button:hover {
-  background-color: #033669;
 }
 
 .flat-style .segmented-control > input:not(:checked):not(:hover) + label {
