--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -12,9 +12,18 @@ $panelWidth:180px;
         top: 75px;
         z-index: 1000;
         position: fixed;
-        transition: all .3s ease;
+        transition: opacity .3s ease;
         width: $panelWidth;
         left: 55px;
+
+        .radio-button-group .button-border {
+
+                display: inline-block;
+
+                .button {
+                        padding: 8px 20px;
+                }
+        }
 
         .radio-group {
                 padding: 1px 64px;
@@ -25,6 +34,13 @@ $panelWidth:180px;
         // left: -$panelWidth;
         opacity: 0;
         visibility: hidden;
+
+        // disable buttons instantly when close the setting panel
+        .radio-button-group .button-border,
+        .radio-button-group .button-border .button {
+                // make
+                transition: opacity 0s linear !important;
+        }
 }
 
 .setting-panel.show {
@@ -56,7 +72,6 @@ $panelWidth:180px;
                 border-top-left-radius: 0 !important;
                 border-bottom-left-radius: 0 !important;
                 position: fixed;
-                // width: 98%;
                 height: 98%;
         }
 
@@ -77,7 +92,6 @@ $panelWidth:180px;
                 line-height: 40px;
         }
 }
-
 
 .setting-section .scrollable {
         padding-top: 1rem;
@@ -201,14 +215,6 @@ $scrollbarRadius: 16px;
         padding: 8px 0 0 0;
 }
 
-.theme-skin .button-border {
-        display: inline-block;
-}
-
-.theme-skin .button {
-        // min-width: 100%;
-        padding: 8px 20px !important;
-}
 
 .theme-skin div a {
         font-size: 1.15rem *$fontScale !important;
