--- a/scss/forms/_range-slider.scss
+++ b/scss/forms/_range-slider.scss
@@ -25,6 +25,8 @@ $range-label-width: 2rem !default;
         display: inline !important;
 
         label {
+                border-radius: $borderRadius;
+                color: $mutedBaseColor;
                 font-size: 1.1rem *$fontScale !important;
                 display: block;
                 margin: 1.5*$sliderMargin 0 $sliderMargin;
@@ -32,6 +34,7 @@ $range-label-width: 2rem !default;
 }
 
 .range-slider__range {
+        border-radius: $borderRadius;
         -webkit-appearance: none;
         width: calc(75% - (#{$range-label-width + 0.5rem}));
         height: $range-track-height;
@@ -80,6 +83,8 @@ $range-label-width: 2rem !default;
         transition: all 0.3s ease;
         font-style: italic;
         font-size: 1rem *$fontScale !important;
+        border-radius: $borderRadius;
+        color: $mutedBaseColor;
 }
 
 .range-slider__value .after {
