Dynamic border radius for injected section

--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1173,6 +1173,7 @@ body,
 .checkbox label,
 .modal-content,
 table,
+.injected-section,
 .display-content > .container,
 .portfolio-item-content,
 .portfolio-icon a,
