--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -166,6 +166,7 @@ body,
 .checkbox label,
 .modal-content,
 table,
+.injected-section,
 .display-content>.container,
 .portfolio-item-content,
 .portfolio-icon a,
