Fix border radius for display-content

--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1174,6 +1174,7 @@ body,
 .modal-content,
 table,
 .injected-section,
+.display-content,
 .display-content > .container,
 .portfolio-item-content,
 .portfolio-icon a,
