--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -167,6 +167,7 @@ body,
 .modal-content,
 table,
 .injected-section,
+.display-content,
 .display-content>.container,
 .portfolio-item-content,
 .portfolio-icon a,
