Fix button (inner) border radius not override CSS rule
CSSStyleRule.selectorText must be the same as selector in CSS (e.g. .button-border .button # .button)

--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -561,7 +561,7 @@ Init values for dynamic properties to reduce  page load time
   -webkit-transition: 0.8s all ease !important;
 }
 
-.button-border .button {
+.button {
   color: #004b97;
   border-radius: 9px;
   padding: 10px 30px;
@@ -572,7 +572,7 @@ Init values for dynamic properties to reduce  page load time
   display: inline-block;
 }
 
-.button-border .button i {
+.button i {
   font-size: 15px;
 }
 
