--- a/scss/dynamic-style.scss
+++ b/scss/dynamic-style.scss
@@ -2,7 +2,7 @@
 
 @import "setting";
 @import "base/index";
-@import "elements/index";
-@import "forms/index";
+@import "../components/form/index";
+@import "../components/basic/index";
 @import "styles/index";
 @import "init/index";
