--- a/scss/init/_flat.scss
+++ b/scss/init/_flat.scss
@@ -6,7 +6,12 @@ $darkenHighlightColor:#033669; // hover, active button
 $contrastHighlightColor: #EBEBEB;
 
 .flat-style {
-
+     /*-------------------------
+      CONTAINER COMPONENTS
+-------------------------*/
+     .code-block {
+             background-color: $lightenSchemeColor;
+     }
         /*-------------------------
       ELEMENTS
 -------------------------*/
