--- a/scss/dynamic-style.scss
+++ b/scss/dynamic-style.scss
@@ -2,7 +2,8 @@
 
 @import "setting";
 @import "base/index";
-@import "../components/form/index";
 @import "../components/basic/index";
+@import "../components/container/index";
+@import "../components/form/index";
 @import "styles/index";
 @import "init/index";
