--- a/scss/init/_neu.scss
+++ b/scss/init/_neu.scss
@@ -23,7 +23,7 @@ inset #{$distanceX}px #{$distanceY}px #{$blur}px #{$spread}px #{$lightenSchemeCo
 .neu-style {
 
         /*-------------------------
-      FORMS
+      FORM COMPONENTS
 -------------------------*/
         .radio-group {
                 $radioIndicatorUncheckedBoxShadow: -4px -2px 4px 0px $darkenSchemeColor,
@@ -66,6 +66,14 @@ inset #{$distanceX}px #{$distanceY}px #{$blur}px #{$spread}px #{$lightenSchemeCo
                 }
         }
 
+        /*-------------------------
+      CONTAINER COMPONENTS
+-------------------------*/
+        .code-block {
+                        box-shadow: $insetBoxShadow;
+                &:hover{
+                }
+        }
 
         /* TEXT DROP SHADOW */
         // $x: 2.5;
