Simplify radio stylizing

--- a/components/container/_code-block.scss
+++ b/components/container/_code-block.scss
@@ -11,6 +11,7 @@
                 code {
                         text-shadow: 0 .5px $baseColor;
                         display: block;
+                        color: gray; //TODO: Dynamic (comment in code)
                         // white-space: pre;
                         white-space: pre-wrap;
                         white-space: -moz-pre-wrap;
