--- a/components/form/_range-slider.scss
+++ b/components/form/_range-slider.scss
@@ -26,7 +26,7 @@ $range-label-width: 2rem !default;
 
         label {
                 border-radius: $borderRadius;
-                color: $mutedBaseColor;
+                color: $baseColor;
                 font-size: 1.1rem *$fontScale !important;
                 display: block;
                 margin: 1.5*$sliderMargin 0 $sliderMargin;
